<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:orderInCategory="1"
        android:visible="false"
        android:icon="@drawable/ic_search_24dp"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_import"
        android:title="@string/import_contacts"
        android:orderInCategory="99"
        android:visible="false"/>

</menu>

