<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:id="@+id/dialog_layout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:src="@drawable/ic_delete"
        android:id="@+id/dialog_img"
        android:contentDescription="@string/deleteWarning"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_img"
        android:background="@android:color/white"
        android:text="@string/deleteWarning"
        android:textSize="15sp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/dialog_txt"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_below="@id/dialog_txt"
        android:background="@android:color/white">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="10dp"
            android:background="@drawable/rect"
            android:text="@string/yes"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:id="@+id/dialog_yes"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="10dp"
            android:background="@drawable/rect"
            android:text="@string/no"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:id="@+id/dialog_no"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>


</RelativeLayout>