<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/brown_background"
    android:gravity="bottom"
    android:orientation="horizontal"
    android:padding="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/nav_prof_pic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/navigation_drawer_pic"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:civ_border_width="2dp"
        android:layout_marginRight="20dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/nav_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/navigation_drawer_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nav_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_drawer_email" />
    </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|right"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:visibility="visible" />


        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/white"
            android:drawableLeft="@drawable/sign_out"
            android:layout_gravity="bottom|right"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text=" " />

    </RelativeLayout>
</LinearLayout>

</LinearLayout>